# nomad-oasis-ikz

./: Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
