[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.4"]

[project.optional-dependencies]
plugins = [
#  "perovskite-solar-cell-database @ git+https://github.com/FAIRmat-NFDI/nomad-perovskite-solar-cells-database.git@f394d21abafeb659729af0c94e5f90949fce01c1",
#  "nomad-porous-materials @ git+https://github.com/FAIRmat-NFDI/nomad-porous-materials.git@522f4a3208077f534f1c5e886527ee2104283d0b",
#  "nomad-aitoolkit @ git+https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git@b203f8eb28dc4b6771a39d5c5b7ad3d9d8583ac8",
#  "nomad-simulations==0.0.1",
#  "pynxtools[convert]==0.5.0",
#  "nomad-schema-plugin-run>=1.0.1",
#  "nomad-schema-plugin-simulation-workflow>=1.0.1",
#  "nomad-normalizer-plugin-bandstructure>=1.0",
#  "nomad-normalizer-plugin-dos>=1.0",
#  "nomad-normalizer-plugin-soap>=1.0",
#  "nomad-normalizer-plugin-spectra>=1.0",
#  "nomad-normalizer-plugin-system>=1.0",
#  "nomad-normalizer-plugin-simulation-workflow>=1.0",
#  "eelsdbconverter @ git+https://github.com/nomad-coe/nomad-parser-eelsdb.git@entry-point",
#  "nomad-parser-plugins-electronic>=1.0",
#  "nomad-parser-plugins-atomistic>=1.0",
#  "nomad-parser-plugins-workflow>=1.0",
#  "nomad-parser-plugins-database>=1.0",

 "nomad-material-processing @ git+https://github.com/FAIRmat-NFDI/nomad-material-processing.git@8545ef374ac53169fe1e40be927a212a364ebda1",
 "nomad-measurements",
 "nomad-analysis",
 "nomad-ikz-plugin",
 "nomad-ikz-fz @ git+https://github.com/IKZ-Berlin/ikz-fz-nomad-plugin.git@e01d4caee7acb204335366fbdd6b9e3b8010296e",
 "nomad_ikz_raman @ git+https://github.com/IKZ-Berlin/IKZ_raman.git@797a36fa985412e00527d4298f763eb2318a3ec4",
 "nomad_ikz_omega_theta_xrd @ git+https://github.com/IKZ-Berlin/ikz-omega-theta-xrd.git@e7049b305f6f5387008f8350f4a9f01bd942c386", 
 "rtg-sims @ git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git@c286f23d14dcb2e4dc32454f9ee1a2c467428c77#subdirectory=rtg-sims", 
 "ikz-trpl @ git+https://github.com/IKZ-Berlin/ikz-trpl.git@eff798a402344d65384c1b5666bf187747be01a6",
 "statsmodels",
 "plotly<6.0.0",
]
jupyter = [
  "voila",
  "ipyaggrid",
  "ipysheet",
  "ipydatagrid",
  "jupyter-flex",
  "pyOpenSSL",
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.uv.sources]
nomad-ikz-plugin = { git = "https://github.com/IKZ-Berlin/nomad-ikz-plugin.git", rev = "v0.1.7" }
nomad-measurements = { git = "https://github.com/FAIRmat-NFDI/nomad-measurements.git", rev = "v1.1.1" }
nomad-analysis = { git = "https://github.com/FAIRmat-NFDI/nomad-analysis.git", rev = "v0.0.7" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
