[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = ["nomad-lab[parsing, infrastructure]>=1.3.15"]

[project.optional-dependencies]
plugins = [
 "nomad-material-processing @ git+https://github.com/FAIRmat-NFDI/nomad-material-processing.git@8545ef374ac53169fe1e40be927a212a364ebda1",
 "nomad-measurements",
 "nomad-analysis",
 "nomad-ikz-plugin",
 "nomad-ikz-fz @ git+https://github.com/IKZ-Berlin/ikz-fz-nomad-plugin.git@3a8dbfb8b5bc2c6ef53d997cc2097cf70f17c27b",
 "nomad_ikz_raman @ git+https://github.com/IKZ-Berlin/IKZ_raman.git@797a36fa985412e00527d4298f763eb2318a3ec4",
 "nomad_ikz_omega_theta_xrd @ git+https://github.com/IKZ-Berlin/ikz-omega-theta-xrd.git@e7049b305f6f5387008f8350f4a9f01bd942c386", 
 "rtg-sims @ git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git@d7db1bc694342aaf8d628da2febca237d91e23ed#subdirectory=rtg-sims", 
 "ikz-trpl @ git+https://github.com/IKZ-Berlin/ikz-trpl.git@eff798a402344d65384c1b5666bf187747be01a6",
 "statsmodels",
 "plotly<6.0.0",
]
jupyter = [
  "voila",
  "ipyaggrid",
  "ipysheet",
  "ipydatagrid",
  "jupyter-flex",
  "pyOpenSSL",
]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
prerelease = "disallow"

[tool.uv.sources]
nomad-ikz-plugin = { git = "https://github.com/IKZ-Berlin/nomad-ikz-plugin.git", rev = "v0.1.9" }
nomad-measurements = { git = "https://github.com/FAIRmat-NFDI/nomad-measurements.git", rev = "v1.2.3" }
nomad-analysis = { git = "https://github.com/FAIRmat-NFDI/nomad-analysis.git", rev = "v0.0.7" }

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
